[package]
name = "paxos"
version = "0.0.5"
authors = ["Tyler Neely <t@jujit.su>"]
description = "a well-tested implementation of the CASPaxos protocol for the sled lightweight database kit"
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/paxos"
repository = "https://github.com/spacejam/paxos"
keywords = ["database", "embedded", "consensus", "distributed", "paxos"]
documentation = "https://docs.rs/paxos/"
readme = "README.md"
edition = "2018"

[dependencies]
sled = "0.32.0"
bincode = "1.2.1"
serde = "1.0.111"
serde_derive = "1.0.112"
crc32fast = "1.2.0"
rand = "0.7.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dev-dependencies]
quickcheck = "0.9.2"
rand = "0.7.3"
